--- a/nix/app/internal/views/layouts/base.templ
+++ b/nix/app/internal/views/layouts/base.templ
@@ -2,11 +2,12 @@ package layouts
 
 templ Base(title string) {
 	<!DOCTYPE html>
-	<html lang="en">
+	<html lang="en" data-theme="treacherest">
 		<head>
 			<meta charset="UTF-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 			<title>{ title } - MTG Treacherest</title>
+			<link href="/static/css/output.css" rel="stylesheet"/>
 			<script type="module" src="https://cdn.jsdelivr.net/gh/starfederation/datastar@v1.0.0-beta.11/bundles/datastar.js"></script>
 			<style>
 			* {
