--- a/nix/app/internal/views/pages/home.templ
+++ b/nix/app/internal/views/pages/home.templ
@@ -47,7 +47,7 @@ templ Home() {
 								You will join as a player and participate in the game
 							</div>
 							
-							<button type="submit" style="margin-top: 1.5rem; width: 100%; padding: 1rem; font-size: 1.2rem;">
+							<button type="submit" class="btn btn-primary btn-lg w-full mt-6">
 								Create Room
 							</button>
 						</form>
@@ -69,7 +69,7 @@ templ Home() {
 								required
 								style="text-transform: uppercase; width: 100%; padding: 0.8rem; font-size: 1.1rem;"
 							/>
-							<button type="submit" style="margin-top: 1rem; width: 100%; padding: 1rem; font-size: 1.2rem;">
+							<button type="submit" class="btn btn-secondary btn-lg w-full mt-4">
 								Join Room
 							</button>
 						</form>
