--- a/nix/app/internal/views/components/role_config.templ
+++ b/nix/app/internal/views/components/role_config.templ
@@ -45,6 +45,23 @@ templ RoleConfiguration(room *game.Room, cfg *config.ServerConfig, sortedRoles [
 			</form>
 		</div>
 
+		// Advanced options
+		<div class="advanced-options">
+			<h4>Advanced Options</h4>
+			<div class="option-item">
+				<input 
+					type="checkbox" 
+					id="allow-leaderless"
+					checked?={ room.RoleConfig.AllowLeaderlessGame }
+					data-on-change={ fmt.Sprintf(`(!evt.target.checked || confirm('Enable leaderless games? This will allow games where all roles are hidden.')) && @post('/room/%s/config/leaderless', {body: JSON.stringify({allowed: evt.target.checked})})`, room.Code) }
+				/>
+				<label for="allow-leaderless">
+					Allow Leaderless Games
+					<span class="option-description">(Enables games without a Leader role)</span>
+				</label>
+			</div>
+		</div>
+
 		// Role toggles and counts
 		<div class="role-settings">
 			<h4>Roles</h4>
@@ -57,7 +74,11 @@ templ RoleConfiguration(room *game.Room, cfg *config.ServerConfig, sortedRoles [
 							type="checkbox" 
 							id={ "role-" + role.Name }
 							data-bind={ role.Name + "_enabled" }
-							data-on-change={ fmt.Sprintf(`$roleName = '%s'; $enabled = $%s_enabled; @post('/room/%s/config/toggle')`, role.Name, role.Name, room.Code) }
+							if role.Name == "leader" && room.RoleConfig.AllowLeaderlessGame {
+								data-on-change={ fmt.Sprintf(`$roleName = '%s'; $enabled = $%s_enabled; ($enabled || confirm('Are you sure you want to disable the Leader role? This will create a leaderless game where all roles are hidden.')) ? @post('/room/%s/config/toggle') : ($%s_enabled = true)`, role.Name, role.Name, room.Code, role.Name) }
+							} else {
+								data-on-change={ fmt.Sprintf(`$roleName = '%s'; $enabled = $%s_enabled; @post('/room/%s/config/toggle')`, role.Name, role.Name, room.Code) }
+							}
 						/>
 						<label for={ "role-" + role.Name }>
 							{ role.Definition.DisplayName }
